# hackuta

./: .gitignore  index.html  main.py  pyproject.toml  script.js  style.css
app/: app.py
app/flaskr/: __init__.py
app/lib/: chisel_demo.txt  dedalus.py  dedalus_stage_one.txt  dedalus_stage_three.txt  dedalus_stage_two.txt  example.txt  example_prompt.txt  exmplaeproasndcase 1  generate_output.txt  generator.py  input.txt  inthpp_prompt.txt  inthppgenerator.py  parser_prompt.txt  spec.txt  template.chisel  truncate_chisel.py
app/lib/output/: output1.prompt  output1.txt
app/tests/: test_download.py  test_generate.py  test_run.py
chisel/: .gitignore  README.md  example.txt  go.mod  main.cpp  main.go  user_example.txt
chisel/a.out.dSYM/Contents/Resources/Relocations/aarch64/: a.out.yml
chisel/chisel/: construct.go  data.go  read.go  readers.go  regex.go  tokens.go
chisel/src/: Lexer.hpp  Parser.hpp  Token.hpp
