[project]
name = "hackuta"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.11"
dependencies = [
    "build>=1.3.0",
    "dedalus-labs>=0.1.0a9",
    "dotenv>=0.9.9",
    "flask>=3.1.2",
    "openai>=2.1.0",
    "requests>=2.32.5",
    "waitress>=3.0.2",
]
